--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Rock Paper Scissor Lizard Spock</title>
 </head>
 <body>
+
+<section id="top-container">
+
+</section>
 
 </body>
 </html>
