added the short youtube video about rpsls

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 <body>
 
 <section id="top-container">
+<h1>Welcome to RPSLS</h1>
+</section>
 
+<section id="mid-left">
+
+</section>
+
+<section id="mid-right">
+    <iframe width="320" height="240" src="https://www.youtube.com/embed/Kov2G0GouBw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
 
 </body>
