game rules picture,start and reset buttons, edited the basic layout

--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissor Lizard Spock</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1 id="welcome-message">Welcome to RPSLS</h1>
 
-<section id="top-container">
-<h1>Welcome to RPSLS</h1>
-</section>
 
-<section id="mid-left">
+<div class="midLeft">
+    <div class="container">
+        <div><button id="start">Play</button></div>
+        <div><button id="reset">Reset</button></div>
+    </div>
+</div>
 
-</section>
-
-<section id="mid-right">
-    <iframe width="320" height="240" src="https://www.youtube.com/embed/Kov2G0GouBw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</section>
+<div class="midRight">
+    <iframe width="320" height="240" src="https://www.youtube.com/embed/Kov2G0GouBw" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    <h2>Game rules:</h2>
+    <div id="gameRules">
+        <img src="Resources/RPSLS.webp" alt="">
+    </div>
+</div>
 
 </body>
 </html>
