working on the game buttons

--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 
 
 <div class="midLeft">
-    <div class="container">
+    <div id="container">
         <div><button id="start">Play</button></div>
         <div><button id="reset">Reset</button></div>
     </div>
-</div>
+
+    <div id="gamebuttons">
+        <button id="b1"></button>
+        <button id="b2"></button>
+        <button id="b3"></button>
+        <button id="b1"></button>
+        <button id="b2"></button>
+    </div>
+</>
 
 <div class="midRight">
     <iframe width="320" height="240" src="https://www.youtube.com/embed/Kov2G0GouBw" title="YouTube video player"
