--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
     <meta charset="UTF-8">
     <title>Rock Paper Scissor Lizard Spock</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="HandheldFriendly" content="true">
+    <script src="mainJavaScript.js" defer></script>
 </head>
 <body>
-    <h1 id="welcome-message">Welcome to RPSLS</h1>
+<h1 id="welcome-message">Welcome to RPSLS</h1>
 
 
 <div class="midLeft">
-    <div id="container">
-        <div><button id="start">Play</button></div>
-        <div><button id="reset">Reset</button></div>
+    <div id="game">
+        <div>
+            <button id="start">Play</button>
+        </div>
+        <div>
+            <button id="reset">Reset</button>
+        </div>
     </div>
 
-    <div id="gamebuttons">
-        <button id="b1"></button>
-        <button id="b2"></button>
-        <button id="b3"></button>
-        <button id="b1"></button>
-        <button id="b2"></button>
     </div>
-</>
 
-<div class="midRight">
-    <iframe width="320" height="240" src="https://www.youtube.com/embed/Kov2G0GouBw" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-    <h2>Game rules:</h2>
-    <div id="gameRules">
-        <img src="Resources/RPSLS.webp" alt="">
+    <div class="midRight">
+        <iframe width="320" height="240" src="https://www.youtube.com/embed/Kov2G0GouBw" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        <h2>Game rules:</h2>
+        <div id="gameRules">
+            <img src="Resources/RPSLS.webp" alt="">
+        </div>
     </div>
-</div>
 
 </body>
 </html>
