--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="display">
         <button id="generate">Generate computer choice</button>
         <span class="resultScore"> </span>
-        <img src="" alt="" id="computerChoice" >
+        <img src="" alt="" id="computerChoice" style="height: 180px; width: 180px;">
         <p id="result"></p>
         <button id="win">Click to see the winner</button>
     </div>
