fixed an issue with the buttons and made the icons visible onclick

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <div class="display">
         <p>Your choice: </p>
         <span class="resultScore"> </span>
-        <img src="" alt="" id="playerChoice" style="height: 180px; width: 180px;">
+        <img src="" alt="" id="playerChoice">
     </div>
 
     <div class="display">
         <button id="generate">Generate computer choice</button>
         <span class="resultScore"> </span>
-        <img src="" alt="" id="computerChoice" style="height: 180px; width: 180px;">
+        <img src="" alt="" id="computerChoice">
         <p id="result"></p>
         <button id="win">Click to see the winner</button>
     </div>
