added a reset button and edited the readme file

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <img src="" alt="" id="computerChoice">
         <p id="result"></p>
         <button id="win">Click to see the winner</button>
+
     </div>
 </section>
 
@@ -47,6 +48,8 @@
         <img src="Resources/RPSLS.webp" alt="">
     </div>
 </section>
+
+<button class="reset" id="reset">Click to reset the game!</button>
 
 </body>
 </html>
